2007-04-01  Mark Wielaard  <mark@klomp.org>

	* org/omg/CORBA/DynAny.java: Mark as deprecated.
	* org/omg/CORBA/DynArray.java: Likewise.
	* org/omg/CORBA/DynEnum.java: Likewise.
	* org/omg/CORBA/DynFixed.java: Likewise.
	* org/omg/CORBA/DynSequence.java: Likewise.
	* org/omg/CORBA/DynStruct.java: Likewise.
	* org/omg/CORBA/DynUnion.java: Likewise.
	* org/omg/CORBA/DynValue.java: Likewise.
	* org/omg/CORBA/ORB.java (create_basic_dyn_any): Likewise.
	(create_dyn_any): Likewise.
	(create_dyn_array): likewise.
	(create_dyn_enum): Likewise.
	(create_dyn_sequence): Likewise.
	(create_dyn_struct): Likewise.
	(create_dyn_union): Likewise.

2007-04-01  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/javax/management/Translator.java:
	(fromJava(Object[],Method)): Use the array from the
	parameter not the newly created one...
	(fromJava(Object, Type)): Support MXBeans.
	* javax/management/JMX.java:
	(newMXBeanProxy(MBeanServerConnection,ObjectName,Class)):
	Call newMXBeanProxy rather than newMBeanProxy.
	* javax/management/StandardMBean.java:
	(setAttribute(Attribute)): Use InvocationTargetException
	as cause.
	
2007-03-31  Jeroen Frijters  <jeroen@frijters.net>

	PR classpath/31402:
	* java/util/concurrent/CopyOnWriteArrayList.java
	(remove): Fixed ArrayIndexOutOfBoundsException when index == 0.

2007-03-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/openmbean/CompositeDataInvocationHandler.java:
	New file.
	
2007-03-30  Kyle Galloway  <kgallowa@redhat.com>

	* gnu/classpath/jdwp/util/VariableTable.java: Make argCnt and slots ints.
	(write): Replace writeLong with writeInt for above.

2007-03-30  Tom Tromey  <tromey@redhat.com>

	PR libgcj/29869:
	* gnu/java/util/jar/JarUtils.java (log): Commented out.
	(readSFManifest): Don't log.

2007-03-29  Tom Tromey  <tromey@redhat.com>

	PR libgcj/29869:
	* java/util/logging/LogManager.java (readConfiguration): Handle
	comma-separated 'handlers'.  Don't try to add a non-existing
	handler.
