@@ -1,3 +1,9 @@
+2007-04-02  Andrew Haley  <aph@redhat.com>
+
+	* javax/management/ObjectName.java: Handle 0-length names.
+	* javax/management/MBeanServerFactory.java: Use the domain that
+	we've been passed, not the fixed string "DefaultDomain".
+
 2007-04-01  Mark Wielaard  <mark@klomp.org>
 
 	* org/omg/CORBA/DynAny.java: Mark as deprecated.
